<!--
  ~     Mobile Time Accounting
  ~     Copyright (C) 2015
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as
  ~     published by the Free Software Foundation, either version 3 of the
  ~     License, or (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Mobile Time Accounting</string>

    <string name="save">Save</string>

    <!--projectFragment-->
    <string name="search_title">Search</string>
    <string name="separator_special_projects">SPECIAL PROJECTS</string>
    <string name="separator_added_projects">ADDED PROJECTS</string>
    <string name="editProject">Edit Project</string>

    <!--navigationDrawer-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string-array name="drawer_list_items">
        <item name="overview">Recording</item>
        <item name="project_list">Projects</item>
        <item name="dashboard">Dashboard</item>
        <item name="settings">Settings</item>
    </string-array>
    <string name="overview">Recording</string>
    <string name="project_list">Projects</string>
    <string name="dashboard">Dashboard</string>
    <string name="changeUserProfile">Change User Profile</string>
    <string name="settings">Settings</string>

    <!--user_profile_registration.xml-->
    <string name="registrationText">Create new User Profile</string>
    <string name="employeeId">Employee ID (five-digit number)</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="weekly_working_time">Weekly Working Time (in hours)</string>
    <string name="current_overtime">Current Overtime (in hours)</string>
    <string name="total_vacation_time">Total Vacation Time (in days)</string>
    <string name="current_vacation_time">Current Vacation Time (in days)</string>

    <!--add_project.xml-->
    <string name="add_project">Add Project</string>
    <string name="newProjectId">Project ID</string>
    <string name="inputProjectName">Project Name</string>
    <string name="project_id">Project ID:</string>
    <string name="project_name">Project name:</string>
    <string name="finalProjectTextView">Final project date(optional):</string>
    <string name="locationTextView">Location (optional):</string>
    <string name="marker">develop group</string>
    <string name="mapDescription">Select a location for the new project.\nTab on the map to set a new marker or click
        the location button to determine your current position via GPS.</string>
    <string name="noGPSWarning">GPS not enabled. If you want to use GPS to determine your position you have to enable it
        in the settings.</string>
    <string name="next">Next</string>

    <!--add_session_to_project.xml-->
    <string name="add_new_session">Add new session</string>
    <string name="dateText">DATE:</string>
    <string name="hoursFrom">FROM:</string>
    <string name="hoursTo">TO:</string>
    <string name="confirm_project_change_button">OK</string>
    <string name="errorMessageAddSession">Negative times are not allowed."</string>
    <string name="warningAlreadyRecordedSession">You have already recorded for this time.</string>
    <string name="warningSessionWasCutOff">The total working hours can not exceed ten hours per day. Session
        was cut off.</string>
    
    <!--change_user_profile.xml-->
    <string name="changeUserProfileText">Change details of your user profile</string>
    <string name="changeUserProfileBtn">Save</string>

    <!--selected_project.xml-->
    <string name="start_button">Start</string>
    <string name="sessionsDateTextView">DATE</string>
    <string name="sessionsStartTime">START</string>
    <string name="sessionsStopTime">STOP</string>
    <string name="sessionDuration">DURATION</string>
    <string name="edit_project">Edit Project</string>
    <string name="delete_project">Delete project</string>
    <string name="delete_icon_session">Delete Session</string>
    <string name="confirmDeletionDialog">Are you sure you want to delete project</string>
    <string name="finalDateExpired">It is not possible to record times after the final project date</string>
    
    <!--DeleteSessionDialogFragment-->
    <string name="delete_session_answer">Are you sure you want to delete the session?</string>
    <string name="delete_session_ok">Delete</string>
    <string name="delete_session_cancel">Cancel</string>

    <!--dashboard_fragment.xml-->
    <string name="overtime_dashboard_textView">Overtime:</string>
    <string name="vacation_dashboard_textView">Left Vacation / Total Vacation:</string>
    <string name="sendCSV">Send CSV</string>
    <string name="datePickerDialogFragmentMessage">Select the month and year for which you want to send the CSV.</string>
    <string name="expireOfVacationDaysWarning">Please use your left vacation days until 30th of March.\t</string>

    <!--gps settings-->
    <string name="gps_settings_menu">Change GPS Settings</string>
    <string name="use_gps_for_ordering">Use GPS for project ordering</string>
</resources>
