<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrationText" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/employeeId"
            android:hint="@string/employeeId" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastname"
            android:hint="@string/lastname" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstname"
            android:hint="@string/firstname" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/weekly_working_time"
            android:hint="@string/weekly_working_time" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/total_vacation_time"
            android:hint="@string/total_vacation_time" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/current_vacation_time"
            android:hint="@string/current_vacation_time" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/current_overtime"
            android:hint="@string/current_overtime" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createUserButton"
            android:text="@string/createUser" />

</LinearLayout>