<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Mobile Time Accounting
  ~     Copyright (C) 2015
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as
  ~     published by the Free Software Foundation, either version 3 of the
  ~     License, or (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dateText"
                    android:textColor="@color/grey_text_view"
                    android:textStyle="bold"
                    android:layout_weight="0.4"
                    android:gravity="end"
                    android:paddingRight="20dp"/>

            <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/datepickerEditText"
                        android:focusable="false"
                        android:layout_gravity="left|center_vertical"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hoursFrom"
                    android:textColor="@color/grey_text_view"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:layout_weight="0.4"
                    android:paddingRight="20dp"/>

            <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/startTimePickerEditText"
                        android:focusable="false"
                        android:inputType="none"
                        android:layout_gravity="left|center_vertical"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hoursTo"
                    android:textColor="@color/grey_text_view"
                    android:textStyle="bold"
                    android:layout_weight="0.4"
                    android:gravity="end"
                    android:paddingRight="20dp"/>

            <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6">

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/stopTimePickerEditText"
                        android:focusable="false"
                        android:inputType="none"
                        android:layout_gravity="left|center_vertical" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>